<resources>
    <string name="app_name">Med Calculation Kit</string>
    <string name="tab_text_1">BMI CALC</string>
    <string name="tab_text_2">LENGTH CONVERTER</string>
    <string name="tab_text_3">WEIGHT CONVERTER</string>
    <string name="tab_text_4">BMI CHART</string>
    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="bmi_label">BmiCalc/Converter</string>
    <string name="share_text">Have you ever wondered what percentage of your total body weight is made of fat? with the Med Calculation Kit you can know this
        and many more medical calculations in one simple click. It\'s more than an app \! https://play.google.com/store/apps/details?id=com.wordpress.cruxonlinedotblog.cruxbmicalc</string>
    <string name="convert_from">CONVERT FROM</string>
    <string name="share_header">Share Med Calculation Kit With</string>
    <string name="convert_to">CONVERT TO</string>
    <string name="weight">Enter your Weight in Kg</string>
    <string name="height">Enter Your Height in Meters </string>
    <string name="calc_bmi">Calculate Bmi</string>
    <string name="result">Result</string>
    <string name="unit_type">Unit Type</string>
    <string name="enter_number">Enter Number</string>
    <string name="centimeters">CENTIMETERS</string>
    <string name="meters">METERS</string>
    <string name="kg">KG</string>
    <string name="m">M</string>
    <string name="submit">SUBMIT</string>
    <string name="you_severely_underweight">You are Severely Underweight</string>
    <string name="you_very_underweight">You are Very Underweight</string>
    <string name="you_underweight">You are Underweight</string>
    <string name="you_normal_weight">You are Normal weight</string>
    <string name="you_over_weight">You are Over weight</string>
    <string name="you_first_class_obese">You are First Class Obese</string>
    <string name="you_second_class_obese">You are Second Class Obese</string>
    <string name="you_third_class_obese">You are Third Class Obese</string>
    <string name="severely_underweight"> Severely Underweight</string>
    <string name="very_underweight"> Very Underweight</string>
    <string name="underweight"> Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="over_weight"> Over weight</string>
    <string name="first_class_obese"> First Class Obese</string>
    <string name="second_class_obese"> Second Class Obese</string>
    <string name="third_class_obese"> Third Class Obese</string>
    <string name="action_feedback"> Feedback</string>
    <string name="bmi_value"> BMI VALUE</string>
    <string name="interpretation"> INTERPRETATION</string>
    <string name="first"> 0 -15</string>
    <string name="second"> 15 -16</string>
    <string name="third"> 16 -18.5</string>
    <string name="fourth">18.5 -25</string>
    <string name="fifth"> 25 -30</string>
    <string name="sixth"> 30 -35</string>
    <string name="seventh"> 35 -40</string>
    <string name="eight"> 40 and above</string>
    <string name="bmi_converter">Bmi Calc and Converter</string>
    <string name="respiratory">Respiratory System</string>
    <string name="cardiovascular">Cardiovascular System</string>
    <string name="renal">Renal Physiology</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_respiratory">Respiratory System</string>
    <string name="menu_cardiovascular">Cardiovascular System</string>
    <string name="menu_renal">Renal Physiology</string>
    <string name="menu_bmi">Bmi Calc and Converter</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="nav_group_goTo">Go To</string>
    <string name="rate">Rate App</string>
    <string name="nav_group_communicate">Communicate</string>
    <string name="splash_text">Your Sure Bet For Medical Calculations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Med Calc</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_respiratory">Respiratory System</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="title_activity_cardiovascular">Cardiovascular System</string>
    <string name="title_activity_renal">Renal Physiology</string>
    <string name="title_activity_bmi">Bmi Calc and Converter</string>
    <string name="systolic_hint">Systolic Pressure</string>
    <string name="diastolic_hint">Diastolic Pressure</string>
    <string name="map_text">Mean Arterial Pressure</string>
    <string name="pulse_text">Pulse Pressure</string>
    <string name="heart_rate_text">Heart Rate</string>
    <string name="stroke_vol_text">Stroke Volume</string>
    <string name="cardiac_output_text">Cardiac Output</string>
    <string name="blood_pressure_text">Blood Pressure</string>
    <string name="peripheral_resistance_text">Peripheral Resistance</string>
    <string name="lean_body_mass">Lean Body Mass</string>
    <string name="title_activity_lean_mass">Lean Body Mass</string>
    <string name="gender_text">Gender</string>
    <string name="age_text">Age 14 or younger</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="calculate_lbm">Calculate LBM</string>
    <string name="hint_cm">Cm</string>
    <string name="kg_hint">Kg</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="clearance_btn_text">Clearance</string>
    <string name="rbf_text_btn">Total RBF</string>
    <string name="ux_text">Ux</string>
    <string name="vol_text">Vol</string>
    <string name="px_text">Px</string>
    <string name="rpf_text">RPF/Cx</string>
    <string name="hct_text">Hematocrit</string>
    <string name="cardiovascular_system_text">Systemic Vascular Resistance(Peripheral resistance)
        reflects the resistance across the whole of the systemic circulation (from aorta to right atrium).\n
        As an individual ages the systolic pressure increases more than the diastolic pressure\n\n
        The Mean Arterial Pressure(MAP) is the mean pressure that moves blood to the tissues.\n
        Mean Arterial Pressure is closer to diastolic pressure than to systolic pressure because diastole lasts longer than systole.
        \n Mean Arterial Pressure is obtained by adding one third of the pulse pressure to the diastolic pressure.
        \n\n Pulse Pressure is the difference between systolic and diastolic pressure.\n\n
        Cardiac Output is defined as the quantity of blood ejected per minute by each ventricle.\n In a healthy heart this
        value is same for right and left ventricles.\n Cardiac Output can be said to be equal to Stroke Volume
        multiplied by heart rate.

    </string>
    <string name="renal_system_text1">Cx = Clearance of Substance X.\n
        Ux = Concentration of Substance X.\n Px = Plasma Concentration of the Substance X in mg per ml of Plasma.
        \n Vol = Volume of Urine Produced Per Minute.\n Rpf= Renal Plasma Flow </string>
    <string name="renal_system_text2">Renal Clearance\n is the net result of three interrelated
        processes: glomerular filtration, tubular secretion and tubular reabsorption.\n\n
    The renal clearance of a substance is the volume of plasma that the kidneys completely
        clear of that drug per unit of time.\n\n Glomerular Filtration Rate(GFR) is the volume of fluid
        filtered from the renal(kidney) capillaries into the Bowmans capsule per unit time.\n
    GFR is equal to the clearance rate when any solute is freely filtered and is neither reabsorbed
        by the kidneys.\n GFR can be determined by injecting inulin or sinistrin(inulin-analog)
        into the plasma.\n GFR can be accurately measured using radioactive substances
        (chromium-51 and technetium-99m)\n\n Renal Blood Flow(RBF)\n Renal blood flow is the volume
        of blood delivered to the kidneys per unit time.\n The Kidneys together receive about 25% 0f cardiac output
        , amounting to 1.2-1.2L/min in a 70kg adult male.
        \n\n Renal Plasma Flow (RPF): is the volume of plasma that reaches the kidneys per unit time.
        \n Renal plasma flow is first determined in order to measure Renal blood flow.
        \n\n\nSources\n wikipedia.org
    </string>
    <string name="lean_mass_text">Lean Body Mass (LBM) is a part of body composition that is defined
        as the difference between total body weight and body fat weigh.\n This means that it counts
        the mass of all organs except body fat, including bones, muscles, blood,skin, and everything else.
        \n While the percentage of LBM is usually not computed, on average it ranges between 60-90% of
        total body weight.\n\n Generally men have a higher proportion of LBM than women do.\n Dosages
        of some anesthetic agents, particularly water-soluble drugs are routinely based on the LBM.
        Some medical exams also use the LBM values.\n Several formulas have been developed for calculating estimated LBM(eLBM)
        \n\n  Lean Body Mass Formula for Adults\n
        The Boer Formula:1\n
        For males:\n
        eLBM = 0.407W + 0.267H - 19.2\n
        For females:\n
        eLBM = 0.252W + 0.473H - 48.3\n
        The James Formula:2\n
        For males:\n
        eLBM = 1.1W - 128(	W/H)2\n
        For females:\n
        eLBM = 1.07W - 148(	W/H)2\n
        The Hume Formula:3\n
        For males:\n
        eLBM = 0.32810W + 0.33929H - 29.5336\n
        For females:\n
        eLBM = 0.29569W + 0.41813H - 43.2933\n\n
        This app was made using the Humes formula for individuals above 14 years and the Peters
        formula for individuals below 14 years. \n
        In the formulas above, W is the body weight in kilogram and H is the body height in centimeter.\n
        Lean Body Mass Formula for Children\n
        The Peters Formula:\n
        The author suggests that this formula is applicable for children aged 13-14 years old or younger.\n
        The formula is used to compute an eLBM based on an estimated extracellular volume (eECV) as follows:\n
        eECV = 0.0215·W0.6469·H0.7236\n
        eLBM = 3.8·eECV\n\n
        Sources\n
        1.	Boer P. "Estimated lean body mass as an index for normalization of body fluid volumes in man." Am J Physiol 1984; 247: F632-5\n
        2.	James, W. "Research on obesity: a report of the DHSS/MRC group" HM Stationery Office 1976\n
        3.	Hume, R "Prediction of lean body mass from height and weight.". J Clin Pathol. 1966 Jul; 19(4):389-91.\n
        4.	A. M. Peters, H. L. R. Snelling, D. M. Glass, N. J. Bird "Estimation of lean body mass in children".\n
        British Journal of Anaesthesia1 06(5): 719-23 (2011).

    </string>
</resources>